2003-06-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/s390/semtimedop.c (semtimedop): Add real
	implementation.

2003-06-07  Thorsten Kukuk  <kukuk@suse.de>

	* nis/nss_compat/compat-grp.c: Remove unused nis_first variable
	(getgrent_next_file) Don't store group name to early in blacklist.

	* nis/nss_compat/compat-pwd.c (internal_getpwuid_r): Save strlen result
	and use memcpy instead of strcpy.

2003-06-28  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_compat/compat-grp.c: Optimize several little things.  Use
	stream unlocked.
	* nis/nss_compat/compat-initgroups.c: Likewise.
	* nis/nss_compat/compat-pwd.c: Likewise.
	* nis/nss_compat/compat-spwd.c: Likewise.

2003-06-27  Thorsten Kukuk  <kukuk@suse.de>

	* nis/nss_compat/compat-initgroups.c: Don't use our own NIS/NIS+
	functions, dlopen corresponding NSS module instead.

2003-06-27  Jeroen Dekkers  <jeroen@dekkers.cx>

	* sysdeps/mach/hurd/alpha/init-first.c: Remove call to __libc_init.
	* sysdeps/mach/hurd/i386/init-first.c: Likewise.
	* sysdeps/mach/hurd/mips/init-first.c: Likewise.
	* sysdeps/mach/hurd/powerpc/init-first.c: Likewise.

2003-06-27  Ulrich Drepper  <drepper@redhat.com>

	* rt/Makefile (CFLAGS-librt-cancellation.c): Define.

2003-06-26  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/configure.in: Barf rather than define NO_CREATION_TIME.
	* sysdeps/mach/configure: Regenerated.
	* sysdeps/mach/hurd/times.c (times_init): Function removed.
	(__times): Assume `creation_time' field is available.
	* sysdeps/mach/hurd/Makefile [$(subdir) = csu] (sysdep_routines):
	Don't append set-init.
	* sysdeps/mach/hurd/set-init.c: File removed.

2003-06-26  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (AT_SECURE): New macro.
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): Grok it,
	set __libc_enable_secure.
	(_dl_show_auxv): Add AT_SECURE to name table.
	* elf/dl-support.c (_dl_aux_init): Grok AT_SECURE, set
	__libc_enable_secure and __libc_enable_secure_decided.